--- a/mscore/share/templates/instruments.xml
+++ b/mscore/share/templates/instruments.xml
@@ -3868,11 +3868,25 @@
         <name>Guitar</name>
         <short-name>Guit.</short-name>
         <clef>3</clef>
+        <Tablature>
+           <frets>19</frets>
+           <string>40</string>
+           <string>45</string>
+           <string>50</string>
+           <string>55</string>
+           <string>59</string>
+           <string>64</string>
+           </Tablature>
         <aPitchRange>40-83</aPitchRange>
         <pPitchRange>40-83</pPitchRange>
         <channel>
            <program>24</program>
            </channel>
+        </instrument>
+     <instrument>
+        <init>Guitar</init>
+        <description>Guitar (Tablature)</description>
+        <stafftype>tablature</stafftype>
         </instrument>
      <instrument>
         <name>11-string Alto Guitar</name>
@@ -3946,6 +3960,18 @@
         <channel>
            <program>33</program>
            </channel>
+        <Tablature>
+           <frets>24</frets>
+           <string>28</string>
+           <string>33</string>
+           <string>38</string>
+           <string>43</string>
+           </Tablature>
+        </instrument>
+     <instrument>
+        <init>Electric Bass</init>
+        <description>Electric Bass (4-str. TAB)</description>
+        <stafftype>tablature</stafftype>
         </instrument>
      <instrument>
         <name>Fretless Electric Bass</name>
@@ -3956,48 +3982,6 @@
         <channel>
            <program>35</program>
            </channel>
-        </instrument>
-     <instrument>
-        <name>Mandolin</name>
-        <short-name>Mdn.</short-name>
-        <clef>0</clef>
-        <aPitchRange>55-85</aPitchRange>
-        <pPitchRange>55-85</pPitchRange>
-        <channel>
-           <program>24</program>
-           </channel>
-        </instrument>
-     <instrument>
-        <name>Mandola</name>
-        <short-name>Mda.</short-name>
-        <clef>11</clef>
-        <aPitchRange>48-87</aPitchRange>
-        <pPitchRange>48-87</pPitchRange>
-        <channel>
-           <program>24</program>
-           </channel>
-        </instrument>
-     <instrument>
-        <name>Bouzouki (3-course)</name>
-        <short-name>Bou.</short-name>
-        <clef>3</clef>
-        <aPitchRange>38-89</aPitchRange>
-        <pPitchRange>38-89</pPitchRange>
-        <channel>
-           <program>24</program>
-           </channel>
-        <extended>1</extended>
-        </instrument>
-     <instrument>
-        <name>Bouzouki (4-course)</name>
-        <short-name>Bou.</short-name>
-        <clef>3</clef>
-        <aPitchRange>36-89</aPitchRange>
-        <pPitchRange>36-89</pPitchRange>
-        <channel>
-           <program>24</program>
-           </channel>
-        <extended>1</extended>
         </instrument>
      <instrument>
         <name>Ukulele</name>
@@ -4020,6 +4004,202 @@
            </channel>
         <extended>1</extended>
         </instrument>
+     </instrument-group>
+
+   <instrument-group name="Other Fretted Instruments">
+     <instrument>
+        <name>Lute</name>
+        <short-name>Lute</short-name>
+        <aPitchRange>33-79</aPitchRange>
+        <pPitchRange>33-79</pPitchRange>
+        <channel>
+           <program>25</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>43</string>
+           <string>48</string>
+           <string>53</string>
+           <string>57</string>
+           <string>62</string>
+           <string>67</string>
+           </Tablature>
+        </instrument>
+     <instrument>
+        <init>Lute</init>
+        <description>Lute (Tablature)</description>
+        <stafftype>tablature</stafftype>
+        </instrument>
+     <instrument>
+        <description>Ren. Tenor Lute (5 course)</description>
+        <name>Lute</name>
+        <short-name>Lute</short-name>
+        <aPitchRange>48-79</aPitchRange>
+        <pPitchRange>48-79</pPitchRange>
+        <channel>
+           <program>25</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>48</string>
+           <string>53</string>
+           <string>57</string>
+           <string>62</string>
+           <string>67</string>
+           </Tablature>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <description>Ren. Tenor Lute (6 course)</description>
+        <name>Lute</name>
+        <short-name>Lute</short-name>
+        <aPitchRange>43-79</aPitchRange>
+        <pPitchRange>43-79</pPitchRange>
+        <channel>
+           <program>25</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>43</string>
+           <string>48</string>
+           <string>53</string>
+           <string>57</string>
+           <string>62</string>
+           <string>67</string>
+           </Tablature>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <description>Ren. Tenor Lute (7 course)</description>
+        <name>Lute</name>
+        <short-name>Lute</short-name>
+        <aPitchRange>38-79</aPitchRange>
+        <pPitchRange>38-79</pPitchRange>
+        <channel>
+           <program>25</program>
+           </channel>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <description>Ren. Tenor Lute (8 course)</description>
+        <name>Lute</name>
+        <short-name>Lute.</short-name>
+        <aPitchRange>38-79</aPitchRange>
+        <pPitchRange>38-79</pPitchRange>
+        <channel>
+           <program>25</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>43</string>
+           <string>48</string>
+           <string>53</string>
+           <string>57</string>
+           <string>62</string>
+           <string>67</string>
+           </Tablature>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <description>Ren. Tenor Lute (9 course)</description>
+        <name>Lute</name>
+        <short-name>Lute</short-name>
+        <aPitchRange>38-79</aPitchRange>
+        <pPitchRange>38-79</pPitchRange>
+        <channel>
+           <program>25</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>43</string>
+           <string>48</string>
+           <string>53</string>
+           <string>57</string>
+           <string>62</string>
+           <string>67</string>
+           </Tablature>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <description>Ren. Tenor Lute (10 course)</description>
+        <name>Lute</name>
+        <short-name>Lute</short-name>
+        <aPitchRange>36-79</aPitchRange>
+        <pPitchRange>36-79</pPitchRange>
+        <channel>
+           <program>25</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>43</string>
+           <string>48</string>
+           <string>53</string>
+           <string>57</string>
+           <string>62</string>
+           <string>67</string>
+           </Tablature>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <description>Baroque Lute (13 course)</description>
+        <name>Lute</name>
+        <short-name>Lute</short-name>
+        <aPitchRange>33-77</aPitchRange>
+        <pPitchRange>33-77</pPitchRange>
+        <channel>
+           <program>25</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>45</string>
+           <string>50</string>
+           <string>53</string>
+           <string>57</string>
+           <string>62</string>
+           <string>65</string>
+           </Tablature>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <description>Archlute (14 course)</description>
+        <name>Archlute</name>
+        <short-name>A. Lute</short-name>
+        <aPitchRange>33-77</aPitchRange>
+        <pPitchRange>33-77</pPitchRange>
+        <channel>
+           <program>25</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>43</string>
+           <string>48</string>
+           <string>53</string>
+           <string>57</string>
+           <string>62</string>
+           <string>67</string>
+           </Tablature>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <description>Theorbo (15 course)</description>
+        <name>Theorbo</name>
+        <short-name>Thb.</short-name>
+        <aPitchRange>33-71</aPitchRange>
+        <pPitchRange>33-71</pPitchRange>
+        <channel>
+           <program>25</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>45</string>
+           <string>49</string>
+           <string>55</string>
+           <string>59</string>
+           <string>52</string>
+           <string>57</string>
+           </Tablature>
+        <extended>1</extended>
+        </instrument>
      <instrument>
         <name>Banjo</name>
         <short-name>Bj.</short-name>
@@ -4038,6 +4218,50 @@
         <pPitchRange>48-83</pPitchRange>
         <channel>
            <program>105</program>
+           </channel>
+        </instrument>
+     <instrument>
+        <description>Bouzouki (3-course)</description>
+        <name>Bouzouki</name>
+        <short-name>Bou.</short-name>
+        <clef>3</clef>
+        <aPitchRange>38-89</aPitchRange>
+        <pPitchRange>38-89</pPitchRange>
+        <channel>
+           <program>24</program>
+           </channel>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <description>Bouzouki (4-course)</description>
+        <name>Bouzouki</name>
+        <short-name>Bou.</short-name>
+        <clef>3</clef>
+        <aPitchRange>36-89</aPitchRange>
+        <pPitchRange>36-89</pPitchRange>
+        <channel>
+           <program>24</program>
+           </channel>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <name>Mandolin</name>
+        <short-name>Mdn.</short-name>
+        <clef>0</clef>
+        <aPitchRange>55-85</aPitchRange>
+        <pPitchRange>55-85</pPitchRange>
+        <channel>
+           <program>24</program>
+           </channel>
+        </instrument>
+     <instrument>
+        <name>Mandola</name>
+        <short-name>Mda.</short-name>
+        <clef>11</clef>
+        <aPitchRange>48-87</aPitchRange>
+        <pPitchRange>48-87</pPitchRange>
+        <channel>
+           <program>24</program>
            </channel>
         </instrument>
      <instrument>
@@ -4817,73 +5041,6 @@
           </channel>
         </instrument>
      <instrument>
-        <name>Soprano Viola da gamba</name>
-        <short-name>S. Vla. d. g.</short-name>
-        <clef>9</clef>
-        <aPitchRange>50-86</aPitchRange>
-        <pPitchRange>50-93</pPitchRange>
-        <channel>
-           <program>110</program>
-           </channel>
-        <channel name="pizzicato">
-          <program value="45"/>
-          </channel>
-        <channel name="tremolo">
-          <program value="44"/>
-          </channel>
-        <extended>1</extended>
-        </instrument>
-     <instrument>
-        <name>Alto Viola da gamba</name>
-        <short-name>A. Vla. d. g.</short-name>
-        <clef>11</clef>
-        <aPitchRange>45-81</aPitchRange>
-        <pPitchRange>45-88</pPitchRange>
-        <channel>
-           <program>110</program>
-           </channel>
-        <channel name="pizzicato">
-          <program value="45"/>
-          </channel>
-        <channel name="tremolo">
-          <program value="44"/>
-          </channel>
-        <extended>1</extended>
-        </instrument>
-     <instrument>
-        <name>Tenor Viola da gamba</name>
-        <short-name>T. Vla. d. g.</short-name>
-        <clef>12</clef>
-        <aPitchRange>43-79</aPitchRange>
-        <pPitchRange>43-86</pPitchRange>
-        <channel>
-           <program>110</program>
-           </channel>
-        <channel name="pizzicato">
-          <program value="45"/>
-          </channel>
-        <channel name="tremolo">
-          <program value="44"/>
-          </channel>
-        <extended>1</extended>
-        </instrument>
-     <instrument>
-        <name>Viola da gamba</name>
-        <short-name>Vla. d. g.</short-name>
-        <clef>4</clef>
-        <aPitchRange>38-74</aPitchRange>
-        <pPitchRange>38-81</pPitchRange>
-        <channel>
-           <program>110</program>
-           </channel>
-        <channel name="pizzicato">
-          <program value="45"/>
-          </channel>
-        <channel name="tremolo">
-          <program value="44"/>
-          </channel>
-        </instrument>
-     <instrument>
         <name>Violoncello</name>
         <short-name>Vlc.</short-name>
         <clef>4</clef>
@@ -4996,20 +5153,95 @@
           </channel>
         </instrument>
      <instrument>
+        <name>Pardessus de viole</name>
+        <short-name>Pds. v.</short-name>
+        <clef>0</clef>
+        <aPitchRange>55-91</aPitchRange>
+        <pPitchRange>555-96</pPitchRange>
+        <channel>
+           <program>40</program>
+           </channel>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <name>Treble Viol</name>
+        <short-name>Tr. vl.</short-name>
+        <clef>0</clef>
+        <aPitchRange>50-86</aPitchRange>
+        <pPitchRange>50-91</pPitchRange>
+        <channel>
+           <program>40</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>50</string>
+           <string>55</string>
+           <string>60</string>
+           <string>64</string>
+           <string>69</string>
+           <string>74</string>
+           </Tablature>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <name>Tenor Viol</name>
+        <short-name>T. Vl.</short-name>
+        <clef>11</clef>
+        <aPitchRange>43-79</aPitchRange>
+        <pPitchRange>43-84</pPitchRange>
+        <channel>
+           <program>41</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>43</string>
+           <string>48</string>
+           <string>53</string>
+           <string>57</string>
+           <string>62</string>
+           <string>67</string>
+           </Tablature>
+        <extended>1</extended>
+        </instrument>
+     <instrument>
+        <name>Viola da gamba</name>
+        <short-name>Vla. d. g.</short-name>
+        <clef>4</clef>
+        <aPitchRange>33-74</aPitchRange>
+        <pPitchRange>33-79</pPitchRange>
+        <channel>
+           <program>42</program>
+           </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>38</string>
+           <string>43</string>
+           <string>48</string>
+           <string>52</string>
+           <string>57</string>
+           <string>62</string>
+           </Tablature>
+        </instrument>
+     <instrument>
+        <init>Viola da gamba</init>
+        <description>Viola da gamba (Tablature)</description>
+        <stafftype>tablature</stafftype>
+        </instrument>
+      <instrument>
+        <init>Viola da gamba</init>
+        <description>Viola da gamba (6 strings)</description>
+        <aPitchRange>38-74</aPitchRange>
+        <pPitchRange>38-79</pPitchRange>
+        </instrument>
+     <instrument>
         <name>Violone</name>
         <short-name>Vne.</short-name>
         <clef>5</clef>
         <aPitchRange>28-62</aPitchRange>
         <pPitchRange>28-67</pPitchRange>
         <channel>
-           <program>110</program>
+           <program>43</program>
            </channel>
-        <channel name="pizzicato">
-          <program value="45"/>
-          </channel>
-        <channel name="tremolo">
-          <program value="44"/>
-          </channel>
         <extended>1</extended>
         </instrument>
      </instrument-group>
