--- a/trunk/mscore/mscore/musescore.qrc
+++ b/trunk/mscore/mscore/musescore.qrc
@@ -28,6 +28,7 @@
       <file alias="fonts/mscore_tab_renaiss.ttf">../fonts/mscore_tab_renaiss.ttf</file>
       <file alias="fonts/mscore_tab_renaiss2.ttf">../fonts/mscore_tab_renaiss2.ttf</file>
       <file alias="fonts/FiguredBassMHGPL.otf">../fonts/FiguredBassMHGPL.otf</file>
+      <file alias="fonts/mscore-BC.ttf">../fonts/mscore-BC.ttf</file>
 
       <file alias="data/instruments.xml">../share/templates/instruments.xml</file>
       <file>data/splash.jpg</file>
