--- a/branches/mscore-0-9-6/mscore/mscore/excerptsdialog.ui
+++ b/branches/mscore-0-9-6/mscore/mscore/excerptsdialog.ui
@@ -56,6 +56,9 @@
           <property name="text" >
            <string>New</string>
           </property>
+          <property name="default">
+           <bool>true</bool>
+          </property>          
          </widget>
         </item>
        </layout>
