--- a/trunk/mscore/share/templates/instruments.xml
+++ b/trunk/mscore/share/templates/instruments.xml
@@ -4209,6 +4209,14 @@
         <channel>
            <program>105</program>
            </channel>
+        <Tablature>
+           <frets>13</frets>
+           <string>79</string>
+           <string>50</string>
+           <string>55</string>
+           <string>59</string>
+           <string>62</string>
+           </Tablature>
         </instrument>
      <instrument>
         <name>Tenor Banjo</name>
